style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
html{
  font-size: 10px;
  font-family: 'Montserrat', sans-serif;
}
a {
  text-decoration: none;
}
img{
  height: 100%;
  width: 100%;
  object-fit: cover;
}
/* Debugging purpose */
div {
  border: solid black 0px;
}
.container {
  display: flex;
  align-items: center;
  justify-content: start;
  flex-direction: column;
  padding: 20px;
  max-width: 1200px; 
}
.container-header h1 {
  font-size: 4rem;
  margin-bottom: 40px;
}
#about-me .about-me{
  background-color: white;
  min-height: 100vh;
  max-width: 1200px;
  margin: 0 auto;
  margin-top: 100px;
  padding: 50px;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-direction: column;
  box-shadow: 0px 3px 10px 5px rgba(204,204,204,0.75);
}
/* Hero section */
#hero .hero-img {
  width: 200px;
  height: 200px;
  margin-bottom: 20px;
  border-radius: 50%;
  overflow: hidden;
}
#hero .hero-info {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}
#hero .hero-links {
  display: flex;
  align-content: center;
  justify-content: center;
  flex-direction: row;
}
#hero .hero-link {
  width: 40px;
  height: 40px;
  padding: 2px;
}
#hero .hero-info h1 {
  font-size: 4rem;
}
#hero .hero-info p {
  font-size: 1.8rem;
  margin-bottom: 10px;
}
/* End hero section */

/* Experience section */
#experience .experience-items {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}
#experience .experience-item {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  margin-bottom: 20px;
  padding: 20px;
}
#experience .experience-item-img {
  width: 150px;
  height: 150px;
  border-radius: 20px;
  overflow: hidden;
  margin-right: 10px;
  padding: 2px;
}
#experience .experience-item-info h2 {
  font-size: 3rem;
}
#experience .experience-item-info h3 {
  font-size: 2rem;
  margin-bottom: 10px;
}
#experience .experience-item-info p {
  font-size: 1.8rem;
}
/* End experience section */

/* Skills section */
#skills .skills-items {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  flex-direction: row;
}
#skills .skills-item {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  margin: 0 10px;
  width: 200px;
}
#skills .skills-item-icons {
  display: flex;
  width: 100%;
  align-items: center;
  justify-content: space-evenly;
  flex-direction: row;
}
#skills .skills-item-icon {
  width: 50px;
  height: 50px;
  border-radius: 20px;
  overflow: hidden;
  padding: 2px;
  margin-bottom: 10px;
}
#skills .skills-item h2 {
  font-size: 2rem;
  text-align: center;
  margin-bottom: 5px;
}
#skills .skills-item p {
  font-size: 1.8rem;
  text-align: center;
}
/* End Skills section */

